# gf2mul

./: .gitignore  Cargo.toml  README.md  plot_bench.py  read_factorization.py  run_bench.sh
benches/: bench_gf2.rs
src/: decomp2x2.rs  decomp3x3.rs  decomp4x4.rs  decomp5x5.rs  decomp_macro.rs  gf2mat.rs  lib.rs  m4rm.rs  mul.rs
