[package]
name = "gf2mul"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
m4ri-rust = {version = "=0.0.10", features = ["strassen_mul"]}
const_for = "0.1.5"
clap = {version = "4.5.27", features = ["derive"]}
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
thiserror = "2.0.11"
aligned-vec = "0.6.1"

[dev-dependencies]
criterion =  "0.5"

[[bench]]
name = "bench_gf2"
harness = false